--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -3,10 +3,12 @@
 </div>
 <div *ngIf="!isLoading" class="overviewdiv">
 	
-	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule" style="width:100%" (click)="openCreate(rule)">
-		<h3 matLine style="width: 55%"><b>{{rule.name}}</b></h3>
-		<span matLine style="width: 55%">{{rule.description}}</span>
-		<span matLine style="width: 55%">{{rule.uid}}</span>
+	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule" style="width:100%">
+		<div style="width: 55%" (click)="openCreate(rule)">
+			<h3 matLine><b>{{rule.name}}</b></h3>
+			<span matLine>{{rule.description}}</span>
+			<span matLine>{{rule.uid}}</span>
+		</div>
 		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" color="primary" style="width: 15%; height: auto;"></mat-slide-toggle>
 		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)"><mat-icon>edit</mat-icon></button></div>
 		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
