--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
@@ -1,74 +1,116 @@
 <div *ngIf="step == 0" class="loader">
-        <mat-progress-spinner
-        color="primary"
-        mode="indeterminate">
-    </mat-progress-spinner>
+	<mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
 </div>
 <div *ngIf="step != 0" class="animate-from-right">
-    <section>
-        <div style="width: 60%; margin: auto; display:flex; align-items: center; justify-content: center">
+	<section>
+		<div style="width: 60%; margin: auto; display: flex; align-items: center; justify-content: center">
 			<div style="flex: 1;">
-			<mat-progress-bar style="max-width: 75%; margin: auto;"
-			    color="primary"
-			    mode="determinate"
-			    [value]="(step - 1)*33.3333">
-			</mat-progress-bar>
+				<mat-progress-bar style="max-width: 75%; margin: auto;" color="primary" mode="determinate" [value]="(step - 1)*33.3333"> </mat-progress-bar>
 			</div>
-            <button mat-icon-button (click)="cancel()" style="align-self: flex-end;"><mat-icon>close</mat-icon></button>
-        </div>
-    </section>
+			<button mat-icon-button (click)="cancel()" style="align-self: flex-end;">
+				<mat-icon>close</mat-icon>
+			</button>
+		</div>
+	</section>
 </div>
 <div [hidden]="step != 1" class="creatediv animate-from-right">
 	<h2>Enter name and description</h2>
 	<form>
-		<mat-form-field style="width: 100%;"> <input #name matInput placeholder="Name" [formControl]="requiredFormControl" required [value]="rule.name"> <mat-error *ngIf="requiredFormControl.hasError('required')">Please enter value</mat-error></mat-form-field>
-		<mat-form-field style="width: 100%;"> <textarea #desc matInput placeholder="Description" (keyup.enter)="saveNameAndDescription(name.value, desc.value); next();" [value]="rule.description"></textarea> </mat-form-field>
+		<mat-form-field style="width: 100%;"> <input matInput placeholder="Name" [formControl]="requiredFormControl" required [(ngModel)]="rule.name" name="name"> <mat-error *ngIf="requiredFormControl.hasError('required')">Please enter value</mat-error></mat-form-field>
+		<mat-form-field style="width: 100%;"> <textarea matInput placeholder="Description" [(ngModel)]="rule.description" name="description"></textarea> </mat-form-field>
 	</form>
 	<div class="button-row">
-        <button mat-raised-button (click)="cancel()">Cancel</button>
-	    <button mat-raised-button color="primary" [disabled]="requiredFormControl.hasError('required')" (click)="saveNameAndDescription(name.value, desc.value); next();">Next</button>
+		<button mat-raised-button (click)="cancel()">Cancel</button>
+		<button mat-raised-button color="primary" [disabled]="requiredFormControl.hasError('required')" (click)="next();">Next</button>
 	</div>
 </div>
 <div [hidden]="step != 2" class="creatediv animate-from-right">
 	<div class="itemsdiv">
 		<h2>Choose conditions</h2>
 		<div class="conditions">
-		  <app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
-		  <!-- <button *ngIf="newConditionButtonEnabled" mat-raised-button (click)="createNewConditionComponent()">New condition</button> -->
-		  <a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewConditionComponent()" style="float:left">		      
-			<mat-icon style="color: green;">add</mat-icon>
-			<span style="color: green;">New condition</span>
-          </a>
+			<app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
+			<a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewConditionComponent()" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New condition</span>
+			</a>
 		</div>
 	</div>
-	<div class="button-row" style="clear:both;">
-	    <button mat-raised-button (click)="goBack()">Back</button>
-	    <button mat-raised-button color="primary" [disabled]="isConditionsZero()" (click)="next()">Next</button>
+	<div class="button-row" style="clear: both;">
+		<button mat-raised-button (click)="goBack()">Previous</button>
+		<button mat-raised-button color="primary" [disabled]="isConditionsZero()" (click)="next()">Next</button>
 	</div>
 </div>
 <div [hidden]="step != 3" class="creatediv animate-from-right">
 	<div class="itemsdiv">
 		<h2>Choose actions</h2>
 		<div class="actions">
-		  <app-dynamic-component [componentData]="actionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
-		  <a *ngIf="newActionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent()" style="float:left">              
-            <mat-icon style="color: green;">add</mat-icon>
-            <span style="color: green;">New action</span>
-          </a>
+			<app-dynamic-component [componentData]="actionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
+			<a *ngIf="newActionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent()" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New action</span>
+			</a>
 		</div>
 	</div>
-    <div class="button-row">
-        <button mat-raised-button (click)="goBack()">Back</button>
-        <button mat-raised-button color="primary" [disabled]="isActionsZero()" (click)="next()">Next</button>
-    </div>
+	<div class="button-row">
+		<button mat-raised-button (click)="goBack()">Previous</button>
+		<button mat-raised-button color="primary" [disabled]="isActionsZero()" (click)="next()">Next</button>
+	</div>
 </div>
-<div [hidden]="step != 4" class="creatediv animate-from-right">
-    <h2>Overview</h2>
-    <h3><b>Name:</b> {{rule.name}}</h3>
-    <h3 *ngIf="rule.description"><b>Description:</b> {{rule.description}}</h3>
-    <div class="button-row">
-        <button mat-raised-button (click)="goBack()">Back</button>
-        <button mat-raised-button color="primary" (click)="createRule()">Create</button>
-    </div>
-    <div #bodyJson></div>
+<div [hidden]="step != 4" class="creatediv animate-from-right" style="text-align: left; width: 50%;">
+	<h2 style="text-align: center;">Overview</h2>
+	<div style="display: flex; align-items: center;">
+		<div style="width: 15%">
+			<h3>
+				<b>Name:</b>
+			</h3>
+		</div>
+		<div style="width: 70%">
+			<mat-form-field> <input matInput [(ngModel)]="rule.name"> </mat-form-field>
+		</div>
+	</div>
+	<div style="display: flex; align-items: center;">
+		<div style="width: 15%">
+			<h3>
+				<b>Description:</b>
+			</h3>
+		</div>
+		<div style="width: 70%">
+			<mat-form-field> <textarea matInput [(ngModel)]="rule.description"></textarea> </mat-form-field>
+		</div>
+	</div>
+	<div style="display: flex">
+		<div style="width: 15%">
+			<h3 style="margin: 16px 0 16px 0;">
+				<b>Conditions:</b>
+			</h3>
+		</div>
+		<div style="width: 70%">
+			<app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%;"></app-dynamic-component>
+			<a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewConditionComponent()" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New condition</span>
+			</a>
+		</div>
+	</div>
+	<div style="display: flex">
+		<div style="width: 15%">
+			<h3 style="margin: 16px 0 16px 0;">
+				<b>Actions:</b>
+			</h3>
+		</div>
+		<div style="width: 70%">
+
+			<app-dynamic-component [componentData]="actionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%"></app-dynamic-component>
+			<a *ngIf="newActionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent()" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New action</span>
+			</a>
+		</div>
+	</div>
+	<div class="button-row">
+		<button mat-raised-button (click)="goBack()">Previous</button>
+		<button *ngIf="edit" mat-raised-button color="primary" (click)="updateRule()">Update</button>
+		<button *ngIf="!edit" mat-raised-button color="primary" (click)="createRule()">Create</button>
+	</div>
+	<div #bodyJson></div>
 </div>
