--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -9,11 +9,11 @@
             <div class="inner-item" (click)="onSelect(mod.thing)">
                 <div *ngIf="thingType === 'condition'">
                     <div *ngIf="mod.itemName && item">
-                        When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{mod.state}}
+                        When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
                         </i>
                     </div>
                     <div *ngIf="mod.tempTime">
-                        When the time is <i>{{mod.tempTime}}</i> on {{mod.days}}
+                        When the time is <i>{{mod.tempTime}}</i> on <i>{{parseDays(mod.days)}}</i>
                     </div>
                 </div>
                 <div *ngIf="thingType === 'action'">
