--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -2,8 +2,10 @@
 	<mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
 </div>
 <div *ngIf="!isLoading" class="overviewdiv">
-	
-	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule" style="width:100%">
+	<div class="button-row">
+        <button mat-fab color="primary" (click)="openCreate(null)"><mat-icon>add</mat-icon></button>
+    </div>
+	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule">
 		<div style="width: 55%" (click)="openCreate(rule)">
 			<h3 matLine><b>{{rule.name}}</b></h3>
 			<span matLine>{{rule.description}}</span>
@@ -13,7 +15,4 @@
 		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)"><mat-icon>edit</mat-icon></button></div>
 		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
 	</mat-list-item> </mat-list>
-	<div class="button-row">
-        <button mat-fab color="primary" (click)="openCreate(null)"><mat-icon>add</mat-icon></button>
-    </div>
 </div>
