--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -5,12 +5,12 @@
         </li>
     </ul>
     <ul *ngIf="mod" [@fadeIn] class="itemsdiv" class="items">
-        <li style="width: 60% !important;">
+        <li style="width: 90% !important;">
             <div class="inner-item" (click)="onSelect(mod.thing)">
                 <div *ngIf="thingType === 'condition'">
                     <div *ngIf="mod.itemName && item">
                         When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
-                        </i>
+                        </i> <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
                     </div>
                     <div *ngIf="mod.tempTime">
                         When the time is <i>{{mod.tempTime}}</i> on <i>{{parseDays(mod.days)}}</i>
@@ -18,7 +18,7 @@
                 </div>
                 <div *ngIf="thingType === 'action'">
                     <div *ngIf="item">
-                       Set <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> to <i>{{mod.command}}</i>
+                       Set <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> to <i>{{mod.command}}</i> <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
                     </div>
                 </div>
             </div>
