Design changes: changed colors on "enable/disable" buttons

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.css
@@ -12,6 +12,12 @@
     float: middle;
     clear:both;
 }
+
+.itemsdiv .li{
+	background-color: red; 
+}
+
+
 @media (max-width:800px) {
   .creatediv {
     width:100%;
