--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -11,7 +11,7 @@
 			<span matLine>{{rule.description}}</span>
 			<span matLine>{{rule.uid}}</span>
 		</div>
-		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" color="primary" style="width: 15%; height: auto;"></mat-slide-toggle>
+		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" style="width: 15%; height: auto;"></mat-slide-toggle>
 		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)"><mat-icon>edit</mat-icon></button></div>
 		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
 	</mat-list-item> </mat-list>
