Created header + minor design changes

--- a/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
@@ -1,8 +1,16 @@
-<div style="text-align: center">
-	<section class="mat-typography">
-		<div>
-			<h1>{{titleText}}</h1>
-		</div>
-		<router-outlet></router-outlet>
-	</section>
-</div>
+
+  <div layout="column" layout-fill style="text-align: center">
+  <md-toolbar>
+<section class="mat-typography">
+    <div class="md-toolbar-tools, md-medium-tall">
+      <h1 md-truncate flex class="title">{{titleText}}</h1>
+
+    </div>
+
+        <router-outlet></router-outlet>
+    </section>
+  </md-toolbar>
+  
+  </div>
+  
+
