--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
@@ -14,6 +14,14 @@
   }
 }
 
+.headers {
+    text-align: left;
+    margin: 15px;
+    margin-top: 30px;
+    color: cadetblue;
+
+}
+
 ::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar  {
     background-color: #62f442; 
        
@@ -22,9 +30,10 @@
     background-color: white; 
 }
 
+/*
 ::ng-deep .mat-fab{
 	background-color: green !important; 
-}
+}*/
 
 
 .rules {
