--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -5,12 +5,14 @@
 	<div class="button-row">
         <button mat-fab color="primary" (click)="openCreate(null)"><mat-icon>add</mat-icon></button>
     </div>
+     <div class="headers"><h2> Existing rules</h2></div>
 	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule">
-		<div style="width: 55%" (click)="openCreate(rule)">
+		<div style="width: 50%" (click)="openCreate(rule)">
 			<h3 matLine><b>{{rule.name}}</b></h3>
 			<span matLine>{{rule.description}}</span>
 			<span matLine>{{rule.uid}}</span>
 		</div>
+		
 		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" style="width: 15%; height: auto;"></mat-slide-toggle>
 		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)"><mat-icon>edit</mat-icon></button></div>
 		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
