Added new titles for create rules

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.css
@@ -12,6 +12,11 @@
     float: middle;
     clear:both;
 }
+.headers{
+	margin-left: -580px;
+    margin-top: 30px;
+    color: cadetblue;
+}
 
 .itemsdiv .li{
 	background-color: red; 
