added check for min/max values in number

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -5,10 +5,15 @@
 	        <div *ngIf="selectedItem.type !== 'CustomTime'">
 	            When
 	            <mat-form-field> <mat-select [(ngModel)]="selectedItem"> <mat-option *ngFor="let item of thing.items" [value]="item">{{ item.label }}</mat-option> </mat-select> </mat-form-field>
+	    
+	              
 	            <div *ngIf="selectedItem.type==='Number'" style="display: inline-block">
 	                is
 	                <mat-form-field> <mat-select [(ngModel)]="selectedOperator"> <mat-option *ngFor="let o of operators" [value]="o">{{ o.name }}</mat-option> </mat-select> </mat-form-field>
-	                <mat-form-field> <input matInput type="number" [(ngModel)]="stateInput"> <span matSuffix *ngIf="selectedItem.stateDescription && selectedItem.stateDescription.pattern && !selectedItem.stateDescription.pattern.split(' ').pop().startsWith('%')">{{selectedItem.stateDescription.pattern.split(' ').pop()}}</span> </mat-form-field>
+	                <mat-form-field>  <input matInput *ngIf="selectedItem.stateDescription else noStateDescription" [(ngModel)]="stateInput" type="number" min={{selectedItem.stateDescription.minimum}} max={{selectedItem.stateDescription.maximum}}>  <span matSuffix *ngIf="selectedItem.stateDescription && selectedItem.stateDescription.pattern && !selectedItem.stateDescription.pattern.split(' ').pop().startsWith('%')">{{selectedItem.stateDescription.pattern.split(' ').pop()}}</span> </mat-form-field>
+	            
+	           
+	            
 	            </div>
 	            <div *ngIf="selectedItem.type==='Switch'" style="display: inline-block">
 	                is
