--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -7,7 +7,7 @@
     <ul *ngIf="mod" [@fadeIn] class="itemsdiv" class="items">
         <li style="width: 90% !important;">
             <div class="inner-item" (click)="onSelect(mod.thing)">
-                <div *ngIf="thingType === 'condition'">
+                <div *ngIf="thingType === 'event'">
                     <div *ngIf="mod.itemName && item">
                         When <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
                         </i> <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
