Finished Rule Engine extension

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
@@ -1,7 +1,7 @@
+<h1 class="headers">Create new rule</h1>
 <div *ngIf="step == 0" class="loader">
 	<mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
 </div>
-<h1 class="headers">Create new rule</h1>
 <div *ngIf="step != 0" class="animate-from-right">
 	<section>
 		<div style="width: 60%; margin: auto; display: flex; align-items: center; justify-content: center">
@@ -58,20 +58,20 @@
 	</div>
 </div>
 <div [hidden]="step != 4" class="creatediv animate-from-right">
-    <div class="itemsdiv">
-        <h2>Are there any conditions that needs to be met before your action should happen?</h2>
-        <div class="conditions">
-            <app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
-            <a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent(null, 'condition')" style="float: left">
-                <mat-icon style="color: green;">add</mat-icon>
-                <span style="color: green;">New condition</span>
-            </a>
-        </div>
-    </div>
-    <div class="button-row">
-        <button mat-raised-button (click)="goBack()">Previous</button>
-        <button mat-raised-button color="primary" [disabled]="isConditionsZero()" (click)="next()">Next</button>
-    </div>
+	<div class="itemsdiv">
+		<h2>Are there any conditions that needs to be met before your action should happen?</h2>
+		<div class="conditions">
+			<app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
+			<a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent(null, 'condition')" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New condition</span>
+			</a>
+		</div>
+	</div>
+	<div class="button-row">
+		<button mat-raised-button (click)="goBack()">Previous</button>
+		<button mat-raised-button color="primary" [disabled]="isConditionsZero()" (click)="next()">Next</button>
+	</div>
 </div>
 <div [hidden]="step != 5" class="creatediv animate-from-right" style="text-align: left; width: 50%;">
 	<h2 style="text-align: center;">Overview</h2>
@@ -98,31 +98,48 @@
 	<div style="display: flex">
 		<div style="width: 15%">
 			<h3 style="margin: 16px 0 16px 0;">
-				<b>If:</b>
+				<b>When</b>
 			</h3>
 		</div>
 		<div style="width: 70%">
-			<app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%;"></app-dynamic-component>
-			<a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewConditionComponent()" style="float: left">
+			<app-dynamic-component [componentData]="eventsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%;"></app-dynamic-component>
+			<a *ngIf="newEventButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewModuleComponent(null, 'event')" style="float: left">
 				<mat-icon style="color: green;">add</mat-icon>
 				<span style="color: green;">New condition</span>
 			</a>
 		</div>
 	</div>
+	<hr style="width:70%">
 	<div style="display: flex">
 		<div style="width: 15%">
 			<h3 style="margin: 16px 0 16px 0;">
-				<b>Then:</b>
+				<b>Then</b>
 			</h3>
 		</div>
 		<div style="width: 70%">
 			<app-dynamic-component [componentData]="actionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%"></app-dynamic-component>
-			<a *ngIf="newActionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewActionComponent()" style="float: left">
+			<a *ngIf="newActionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewModuleComponent(null, 'action')" style="float: left">
 				<mat-icon style="color: green;">add</mat-icon>
 				<span style="color: green;">New action</span>
 			</a>
 		</div>
 	</div>
+	<hr style="width:70%">
+	<div style="display: flex">
+		<div style="width: 15%">
+			<h3 style="margin: 16px 0 16px 0;">
+				<b>But only if</b>
+			</h3>
+		</div>
+		<div style="width: 70%">
+			<app-dynamic-component [componentData]="conditionsComponentData" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)" style="text-align: center; width: 80%;"></app-dynamic-component>
+			<a *ngIf="newConditionButtonEnabled" [@fadeIn] mat-icon-button color="green" (click)="createNewModuleComponent(null, 'condition')" style="float: left">
+				<mat-icon style="color: green;">add</mat-icon>
+				<span style="color: green;">New condition</span>
+			</a>
+		</div>
+	</div>
+	<hr style="width:70%">
 	<div class="button-row">
 		<button mat-raised-button (click)="goBack()">Previous</button>
 		<button *ngIf="edit" mat-raised-button color="primary" (click)="updateRule()">Update</button>
